Fixes to Extension
1. Fixed the extension not showing up on clicking
2. Improved the width

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
-	width: 400px;
+	width: 700px;
+	height: auto;
 }
 
 h1 {
